# cpp_homework_framework

./: .gitignore  CMakeLists.txt  argparser.md  doc.md  package.sh  styles.css  template.html
application/: CMakeLists.txt
console_application/: CMakeLists.txt  main.cpp
gui_application/: CMakeLists.txt  TextEditStreamBuf.cpp  TextEditStreamBuf.h  main.cpp  mywidget.cpp  mywidget.h  mywidget.ui
include/: lib.h
src/: argparse.hpp  lib.cpp  lib.h  main.cpp  utils.h
tests/: CMakeLists.txt  tests.cpp  utils.h
